# automato

./: README.md  pyproject.toml
src/: __init__.py
src/automato/: automato.py
src/automato/bottleneck_bootstrap/: bottleneck_bootstrap.py
src/automato/persistence_plotting/: persistence_plotting.py
