[project]
name = "automato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-a-huber", email = "hubermarius@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gudhi>=3.11.0",
    "igraph>=0.11.9",
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
]

[project.scripts]
automato = "automato:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
